src/css/main.scss
@import '_colors.scss';
@import '_images.scss';
@import 'sponsors.scss';
@import 'faqs.scss';
@import '../fonts/ostrich.scss';

body, html {
  font-family: 'Montserrat', sans-serif;
  background-color: #fff;
  padding: 0;
  height: 100%;
  width: 100%;
  margin: 0;
  color: $text;
}

body {
  overflow-x: hidden;
}

h1 {
  text-align: center;
  font-family: 'Ostrich Sans', 'Oswald', sans-serif;
  font-weight: 900;
  text-transform: uppercase;
}

a {
  font-family: 'Oswald', sans-serif;
  text-transform: uppercase;
  color: #fff;
}

.btn {
  margin: 20px;
  padding: 20px;
  display: inline-block;
  border: 1px solid #ababab;
  text-decoration: none;
  background-color: #9fc2c0e3;
  min-width: 165px;
}
.no-wrap {
  white-space: nowrap;
}

section, footer {
  position: relative;
  display: block;

  &.pad {
    padding: 50px;
  }
}

.right {
  text-align: right;
}

.center {
  text-align: center;
}

.left {
  text-align: left;
}

.jumbo {
  min-height: 100%;
  padding: 0;
  background: linear-gradient(-45deg, #ffffff, #a0e6cf, #9fb2b9, #f78f1f) !important;


  .yelling {
    z-index: 100;
    width: 100%;
    text-align: center;
    margin: 0 auto;

    .box {
      font-style: italic;
      max-width: 60%;
      width: 300px;
      padding: 10px 25px 20px 20px;
      text-decoration: none !important;
      display: inline-block;
      margin-top: 100px;
    }

    span {
      text-transform: uppercase;
      text-align: justify;
      text-align-last: center;
      display: inline-block;
      margin: 10px;
      font-size: 2em;
    }

    .day {
      padding-left: 16px;
      font-family: 'Ostrich Sans', sans-serif;
      font-weight: 900;
      font-size: 5em;
      letter-spacing: 3px;
    }

    .date {
      font-family: 'Ostrich Sans', sans-serif;
      font-weight: 600;
      font-size: 2em;

      .time {
        font-family: sans-serif !important;
        display: inline-block;
        margin: 0;
      }
    }
  }
}

.half {
  width: 50%;
  display: inline-block;
}

.band {
  position: relative;
  height: 400px;
  padding: 0 !important;
  text-align: center;
  vertical-align: middle;

  &:hover {
    .shim {
      opacity: 0;
    }
  }

  .logo {
    position: absolute;
    text-align: center;
    height: 100%;
    width: 400px;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
  }
}

.call-to-action {
  text-align: center;

  a {
    margin: 20px;
  }
}

.internal {
  .jumbo {
    height: auto;
    max-height: none;
    padding-top: 200px;
    padding-left: 20px;
    padding-right: 20px;
  }

  h1 {
    text-shadow: 1px 1px 1px #313131;
    display: block;
    position: relative;
    z-index: 200;
    text-align: center;
    font-family: Roboto, sans-serif;
  }
}

.internal-content {
  position: relative;
  z-index: 100;
  margin: 5% 5% 0 5%;
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  background-color: #4e736d;
  box-shadow: 0px 1px 20px 0px #333;
}

.post-footer {
  color: #000;
  text-align: right;
  position: absolute;
  bottom: 5px;
  width: 100%;
  text-shadow: 1px 1px 4px black;
  overflow: hidden;

  span {
    padding: 5px;
    color: #fff;
  }

  a {
    padding: 5px;
    color: #fff !important;
    text-decoration: none;

    &:hover, &:focus {
      color: $secondary !important;
    }

    &:active {
      color: $primary !important;
    }
  }
}

.nimble-logo {
  &:hover {
    img {
      transform: rotate(10deg);
      animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
    }
  }
}

.call-to-action .btn {
  display: block;
  margin: 50px;
}

@media screen and (max-width: 800px) {

  h1 {
    text-align: center !important;
  }

  .jumbo {
    padding-top: 20px;

    .yelling {
      width: 100%;
      text-align: center;
      padding-bottom: 20px;

      span {
        text-align: center !important;
        font-size: 1.2em !important;
      }
    }
  }
}

@media screen and (max-width: 1000px) {
  .half {
    width: 100% !important;
  }

  .no-wrap {
    white-space: normal !important;
  }
}

